applied ITCSS and javascript

--- a/html/calculator.html
+++ b/html/calculator.html
@@ -15,22 +15,22 @@
             <button type="button" class="calculator__btn">7</button>
             <button type="button" class="calculator__btn">8</button>
             <button type="button" class="calculator__btn">9</button>
-            <button type="button" onclick="calculate('divide')" class="calculator__btn calculator__btn--operator">÷</button>
+            <button type="button" class="calculator__btn--operator" id="divide">÷</button>
             <br />
             <button type="button" class="calculator__btn">4</button>
             <button type="button" class="calculator__btn">5</button>
             <button type="button" class="calculator__btn">6</button>
-            <button type="button" onclick="calculate('multiply')" class="calculator__btn calculator__btn--operator">X</button>
+            <button type="button" class="calculator__btn--operator" id="times">&times;</button>
             <br />
             <button type="button" class="calculator__btn">1</button>
             <button type="button" class="calculator__btn">2</button>
             <button type="button" class="calculator__btn">3</button>
-            <button type="button" onclick="calculate('minus')" class="calculator__btn calculator__btn--operator">-</button>
+            <button type="button" class="calculator__btn--operator" id="minus">-</button>
             <br />
-            <button type="button" class="calculator__btn calculator__btn--clear">C</button>
+            <button type="button" class="calculator__btn--clear" data-action="clear">C</button>
             <button type="button" class="calculator__btn">0</button>
-            <button type="button" onclick="calculate('equals')" class="calculator__btn calculator__btn--operator">=</button>
-            <button type="button" onclick="operandBtn('add')" class="calculator__btn calculator__btn--operator" id="add">+</button>
+            <button type="button" class="calculator__btn--operator" id="equals">=</button>
+            <button type="button" class="calculator__btn--operator" id="add">+</button>
         </div>
     </div>
 </body>
